--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "envio-indexer",
-  "version": "0.1.0",
+  "name": "clanker-indexer",
+  "version": "0.1.1",
   "scripts": {
     "clean": "tsc --clean",
     "build": "tsc --build",
