feat(clanker): add LockerFactory

--- a/config.yaml
+++ b/config.yaml
@@ -4,16 +4,23 @@ networks:
 - id: 8453
   start_block: 0
   contracts:
-  - name: SocialDexDeployer
+  - name: LockerFactory
     address:
-    - 0x250c9FB2b411B48273f69879007803790A6AeA47
+    - 0x18db5Fce22bE8814B7E31FBDA2f6488d607A1172
+    - 0x515d45F06EdD179565aa2796388417ED65E88939
     handler: src/EventHandlers.ts
     events:
-    - event: TokenCreated(address tokenAddress, uint256 lpNftId, address deployer, string name, string symbol, uint256 supply, uint256 _supply, address lockerAddress)
+    - event: deployed(address indexed lockerAddress, address indexed owner, uint256 tokenId, uint256 lockingPeriod)
   - name: Clanker
     address:
     - 0x9B84fcE5Dcd9a38d2D01d5D72373F6b6b067c3e1
     handler: src/EventHandlers.ts
     events:
     - event: TokenCreated(address tokenAddress, uint256 lpNftId, address deployer, uint256 fid, string name, string symbol, uint256 supply, address lockerAddress, string castHash)
+  - name: SocialDexDeployer
+    address:
+    - 0x250c9FB2b411B48273f69879007803790A6AeA47
+    handler: src/EventHandlers.ts
+    events:
+    - event: TokenCreated(address tokenAddress, uint256 lpNftId, address deployer, string name, string symbol, uint256 supply, uint256 _supply, address lockerAddress)
 rollback_on_reorg: false
