--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 name: envio-indexer
 networks:
 - id: 8453
-  start_block: 0
+  start_block: 19598626
   contracts:
   - name: LockerFactory
     address:
